# pforge

./: CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: architecture.md  cli.md  configuration.md  training.md  troubleshooting.md
examples/: chat.py  compare.py  constrain.py  debate.py  evolve.py  flash_tune.py  logit_lens.py  think.py
pforge/: __init__.py  cli.py  config.py  inspector.py  models.py  paths.py  server.py  state.py  trainer.py  training_runner.py  utils.py  vllm_manager.py
scripts/deploy/: setup_server.sh
